<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">pleXOr</string>
    <string name="action_settings">Settings</string>
    <string name="empty_message"></string>
    <string name="title_activity_list_test">ListTest</string>

    <!-- Buttons -->
    <string name="button_solve">Solve!</string>
    <string name="button_clear">Clear!</string>
    <string name="button_hint">Hints</string>
    <string name="button_puzzle_helper">Puzzle Helper</string>
    <string name="button_play_locally">Play Local Game</string>
    <string name="button_open_ocr">Import A Game</string>
    <string name="button_generate">Generate!</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_a_game">Create A Game</string>
    <string name="confirm_move">Confirm Move</string>
    <string name="view_games">View Games</string>
    <string name="inbox">Inbox</string>

    <!-- Dialogs -->
    <string name="dialog_game_settings">Game Settings</string>
    <string name="dialog_game_settings_confirm">Create Game</string>

    <string-array name="dialog_move_timelimits">
        <item>Move Timelimit</item>
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>5 hours</item>
        <item>24 hours</item>
        <item>3 days</item>
    </string-array>

    <string name="game_settings_ranked">Ranked</string>
    <string name="game_settings_unranked">Unranked</string>
    <string name="game_settings_invite_players">Invite Player</string>

    <!-- Activities -->
    <string name="title_activity_puzzle_helper">Puzzle Helper</string>
    <string name="title_activity_play_puzzles">Play Puzzles</string>
    <string name="title_activity_match">Match</string>
    <string name="title_activity_active_games_list">ActiveGamesList</string>

    <!-- General -->
    <string name="dash">-</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="cancel">Cancel</string>

    <color name="red">#FF0000</color>
    <color name="trans">#00FFFFFF</color>
    <color name="background_grey">#5B5B5B</color>
    <string name="hello_world">Hello world!</string>
    
    <!-- Drawer stuff -->
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

    <!-- Ad Stuff -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_activity_stats">StatsActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_open_stats_dialog">OpenStatsDialogActivity</string>
    <!-- While it's not a requirement, storing your Ad Unit ID values in a resource
     file is a good practice. As your application grows and your ad publishing needs
      mature, you will occasionally find that you want to change the ID values. If y
      ou make sure they're always in a resource file, you'll never have to search th
      rough your code looking for them.
      https://developers.google.com/mobile-ads-sdk/docs/admob/android/quick-start#configuring_gradle-->

</resources>
